--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: opensearch_dart
-description: A starting point for Dart libraries or applications.
-version: 1.0.0
+description: Opensearch bindings for Dart and Flutter
+version: 0.1.0
 # homepage: https://www.example.com
 
 environment:
@@ -11,7 +11,6 @@ dependencies:
   logging: any
   aws_common: ^0.1.0
   aws_signature_v4: ^0.1.0
-#   path: ^1.8.0
 
 dev_dependencies:
   lints: ^2.0.0
