--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,6 +21,19 @@ services:
         hard: 65536
     volumes:
       - ./test-data/data:/usr/share/opensearch/data
+      - ./test-data/config/opensearch.yaml:/usr/share/opensearch/config/opensearch.yml
+      - ./test-data/snapshots:/usr/share/opensearch/snapshots
     ports:
       - 9200:9200
       - 9600:9600 # required for Performance Analyzer
+  
+  opensearch-dashboards:
+    image: opensearchproject/opensearch-dashboards:2.3.0
+    container_name: opensearch-dashboards
+    ports:
+      - 5601:5601
+    expose:
+      - "5601"
+    environment:
+      - 'OPENSEARCH_HOSTS=["http://opensearch:9200"]'
+      - "DISABLE_SECURITY_DASHBOARDS_PLUGIN=true" # disables security dashboards plugin in OpenSearch Dashboards
