--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -3,13 +3,13 @@ version: 2
 # Enable / Dart flutter updates
 enable-beta-ecosystems: true
 updates:
-#  - package-ecosystem: "github-actions"
-#    directory: '/'
-#    open-pull-requests-limit: 1
-#    schedule:
-#      interval: "monthly"
-#  - package-ecosystem: "pub"
-#    directory: "/"
-#    open-pull-requests-limit: 1
-#    schedule:
-#      interval: "monthly"
+ - package-ecosystem: "github-actions"
+   directory: '/'
+   open-pull-requests-limit: 1
+   schedule:
+     interval: "monthly"
+ - package-ecosystem: "pub"
+   directory: "/"
+   open-pull-requests-limit: 1
+   schedule:
+     interval: "monthly"
