--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,4 +1,4 @@
-name: opensearch_dart
+name: opensearch_dart_example
 description: Opensearch bindings for Dart and Flutter
 version: 0.1.0
 # homepage: https://www.example.com
@@ -9,8 +9,12 @@ environment:
 dependencies:
   dio: ^5.3.3
   logging: any
-  uuid: ^4.1.0
+  aws_common: ^0.6.0
+  aws_signature_v4: ^0.5.0
+  uuid: ^3.0.6
   openapi_generator_annotations: ^4.13.0
+  opensearch:
+    path: ../generated
 
 dev_dependencies:
   lints: ^2.0.0
