--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,23 +1,14 @@
 name: opensearch_dart_example
 description: Opensearch bindings for Dart and Flutter
 version: 0.1.0
+publish_to: none
 # homepage: https://www.example.com
 
 environment:
   sdk: '>=2.18.1 <4.0.0'
 
 dependencies:
-  dio: ^5.3.3
-  logging: any
-  aws_common: ^0.6.0
-  aws_signature_v4: ^0.5.0
-  uuid: ^3.0.6
-  openapi_generator_annotations: ^4.13.0
+  uuid: ^4.1.0
+  logging: ^1.1.0
   opensearch:
     path: ../generated
-
-dev_dependencies:
-  lints: ^2.0.0
-  test: ^1.24.8
-  openapi_generator: ^4.13.0
-  build_runner: ^2.4.6
