--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -8,10 +8,6 @@ on:
     branches:
       - main
 
-defaults:
-  run:
-    working-directory: generated
-
 jobs:
   core-checks:
     name: Core Checks
@@ -21,10 +17,12 @@ jobs:
         uses: actions/checkout@v4
       - uses: dart-lang/setup-dart@v1.5.0
       - run: dart pub get
-      - run: dart format --check
+        working-directory: generated
+      - run: dart format --set-exit-if-changed
       # TODO: Once the analyzer is fixed, uncomment this line.
       #   This requires that the lint package is added to the pubspec.yaml.
       - run: dart analyze #--fatal-warnings
+        working-directory: generated
 
   unit-test:
     name: Unit Tests (Dart ${{ matrix.version }})
@@ -34,10 +32,6 @@ jobs:
       matrix:
         version: [2.18.7, stable]
     steps:
-      - name: Install deps
-        run: |
-          sudo apt update
-          sudo apt install -y make
       - name: Checkout
         uses: actions/checkout@v4
       - uses: dart-lang/setup-dart@v1.5.0
@@ -47,8 +41,9 @@ jobs:
         uses: ankane/setup-opensearch@v1
       - name: Run Tests
         run: dart test --coverage=coverage/lcov.info
+        working-directory: generated
       - name: Archive coverage artifact
         uses: actions/upload-artifact@v2
         with:
           name: unit-test-coverage-${{ matrix.version }}.info
-          path: coverage/lcov.info
+          path: generated/coverage/lcov.info
