--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -18,7 +18,8 @@ jobs:
       - uses: dart-lang/setup-dart@v1.5.0
       - run: dart pub get
         working-directory: generated
-      - run: dart format --set-exit-if-changed
+      - run: dart format ./ --set-exit-if-changed
+        working-directory: generated
       # TODO: Once the analyzer is fixed, uncomment this line.
       #   This requires that the lint package is added to the pubspec.yaml.
       - run: dart analyze #--fatal-warnings
